# cpp-utils

./: .gitmodules
histdb/: .gitignore  CMakeLists.txt  cmake_install.cmake
histdb/apps/: CMakeLists.txt  main.cc
histdb/include/histdb/: command.h  database.h  exception.h  session_id.h
histdb/scripts/: backup-history  insert  lint-clang-tidy  make-main  watch
histdb/shell/: histrc.bash
histdb/src/: CMakeLists.txt  command.cc  config.h.in  database.cc  database.plist  exception.cc  main.cc  session_id.cc  session_id.plist
histdb/src/histdb/: .gitignore  CMakeLists.txt  main.cc
histdb/test/: .gitignore  requirements.txt  test_histdb.py
